qc pass: dhcp with excluded address
---------------------------------- 2024-06-26 19:29:32 24.6.26
no todo: server http / host * searchbar
no todo: server http / host * custom-remote >path/file>
no todo: server http / host * custom-local <text>
no todo: server http / host * webring-remote <path/file*>
no todo: server http / host * webring-local <text>
---------------------------------- 2024-06-26 20:36:39 24.6.26
no todo: server http / host * user-agent matcher with redirect
---------------------------------- 2024-06-26 21:52:46 24.6.26
no todo: cmds.not2vdc  <!----------------------------------------------------------------------------------
no todo: client hide-secrets  <!------------------------------------------------------------------------
no todo: "no " --> cmds.negated   <!--------------------------------------------------------------------
no todo: "no" --> cmds.negated   <!---------------------------------------------------------------------
no todo: ("no") --> cmds.negated   <!-------------------------------------------------------------------
no todo: some more .equals("no") to cmds.negated conversions like   <!-------------------------------------
---------------------------------- 2024-06-26 22:21:00 24.6.26
no todo: scheduler asdf single-run as no respawn or something
---------------------------------- 2024-06-26 22:40:01 24.6.26
no todo: show config-backup if available
---------------------------------- 2024-06-27 04:30:20 24.6.27
no todo: banyan vines protocol in sw
todo: banyan vines appletalk and firends protocols in sw
---------------------------------- 2024-06-27 05:10:52 24.6.27
no todo: upgrade the 3g stack to 4g then 5g with the help of an ettus usrp
---------------------------------- 2024-06-27 12:05:39 24.6.27
no qc pass: p4lang: multilink l2tp3 mpls over vlan
no qc pass: p4lang: multilink l2tp3 routing over vlan
qc pass: p4lang: multilink l2tp3 routing over ipv4
qc pass: p4lang: multilink l2tp3 mpls over ipv4