@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.27-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-27 12:18:21, took 00:12:42, with 60 workers, on 3440 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2024-06-27 12:55:19, took 00:13:03, with 60 workers, on 3440 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1916,10 +1916,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout258.tst">p4lang-rout258.tst</a></td><td>success</td><td>p4lang: l2tp3 routing over bundle</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout259.tst">p4lang-rout259.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 routing over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout260.tst">p4lang-rout260.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 routing over ipv6</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout261.tst">p4lang-rout261.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 routing over ipv4</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout261.tst">p4lang-rout261.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 routing over vlan</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout262.tst">p4lang-rout262.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 mpls over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout263.tst">p4lang-rout263.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 mpls over ipv6</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout264.tst">p4lang-rout264.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 mpls over ipv4</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout264.tst">p4lang-rout264.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 mpls over vlan</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout265.tst">p4lang-rout265.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 routing over bundle</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout266.tst">p4lang-rout266.tst</a></td><td>success</td><td>p4lang: multilink l2tp3 mpls over bundle</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout267.tst">p4lang-rout267.tst</a></td><td>success</td><td>p4lang: l2tp3 mpls over ipv4</td></tr>
