@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.6.27-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-06-27 12:27:18, took 00:08:39, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-06-27 13:02:49, took 00:07:12, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
