@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.27-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-27 12:27:18, took 00:08:39, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-06-27 13:02:49, took 00:07:12, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
